--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build-css": "tailwindcss -i ./css/input.css -o ./css/tailwind.css --watch",
     "build": "tailwindcss -i ./css/input.css -o ./css/tailwind.css --minify",
-    "dev": "python3 -m http.server 8000"
+    "dev": "python3 -m http.server 8000",
+    "start": "python3 -m http.server 8000",
+    "postbuild": "echo 'Build completed successfully!'"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.17"
